<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.bwssystems.HABridge</groupId>
	<artifactId>ha-bridge</artifactId>
	<version>5.2.2</version>
	<packaging>jar</packaging>

	<name>HA Bridge</name>
	<description>Emulates a Philips Hue bridge to allow the Amazon Echo to hook up to other HA systems, i.e. Vera or Harmony Hub or Nest, using lightweight frameworks</description>

	<properties>
		<java.version>1.8</java.version>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<repositories>
		<repository>
	    	<id>jitpack.io</id>
		    <url>https://jitpack.io</url>
		</repository>
	    <repository>
	        <id>Eclipse Paho Repo</id>
	        <url>https://repo.eclipse.org/content/repositories/paho-releases/</url>
	    </repository>
	</repositories>

	<dependencies>
		<dependency>
		    <groupId>com.github.bwssytems</groupId>
		    <artifactId>harmony-java-client</artifactId>
		    <version>master-SNAPSHOT</version>
		    <exclusions>
		       <exclusion> 
		          <groupId>org.slf4j</groupId>
		          <artifactId>slf4j-simple</artifactId>
		       </exclusion>
		       <exclusion> 
		            <groupId>org.slf4j</groupId>
		            <artifactId>log4j-over-slf4j</artifactId>
		       </exclusion>
		    </exclusions> 
		</dependency>
        <dependency>
            <groupId>com.github.bwssytems</groupId>
            <artifactId>nest-controller</artifactId>
            <version>1.0.14</version>
		    <exclusions>
		       <exclusion> 
		          <groupId>org.slf4j</groupId>
		          <artifactId>slf4j-simple</artifactId>
		       </exclusion>
		       <exclusion> 
		            <groupId>org.slf4j</groupId>
		            <artifactId>log4j-over-slf4j</artifactId>
		       </exclusion>
		    </exclusions> 
        </dependency>
		<dependency>
		    <groupId>com.sparkjava</groupId>
		    <artifactId>spark-core</artifactId>
		    <version>2.7.2</version>
		    <exclusions>
		    	<exclusion>
		    		<artifactId>slf4j-simple</artifactId>
		    		<groupId>org.slf4j</groupId>
		    	</exclusion>
		    </exclusions>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5.1</version>
		</dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpcore</artifactId>
            <version>4.4.4</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.24</version>
        </dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.2.1</version>
		</dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.6.2</version>
        </dependency>
		<dependency>
		  <groupId>net.java.dev.eval</groupId>
		  <artifactId>eval</artifactId>
		  <version>0.5</version>
		</dependency>
		<dependency>
			<groupId>com.google.inject</groupId>
			<artifactId>guice</artifactId>
			<version>4.1.0</version>
		</dependency>
		<dependency>
		  <groupId>org.igniterealtime.smack</groupId>
		  <artifactId>smack-core</artifactId>
		  <version>4.2.0</version>
		</dependency>
	    <dependency>
	        <groupId>org.eclipse.paho</groupId>
	        <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
	        <version>1.2.0</version>
	    </dependency>
		<dependency>
		    <groupId>junit</groupId>
		    <artifactId>junit</artifactId>
		    <version>4.12</version>
      		<scope>test</scope>
		</dependency>
		<dependency>
		  <groupId>com.github.bwssytems</groupId>
		  <artifactId>lifx-sdk-java</artifactId>
		  <version>2.1.6</version>
		</dependency>
		<dependency>
		    <groupId>com.github.mob41</groupId>
		    <artifactId>broadlink-java-api</artifactId>
		    <version>master-SNAPSHOT</version>
		</dependency>
		<dependency>
		  <groupId>org.apache.commons</groupId>
		  <artifactId>commons-lang3</artifactId>
		  <version>3.5</version>
		</dependency>
	</dependencies>

	<build>
	    <resources>
	      <resource>
	        <directory>src/main/resources</directory>
	        <includes>
	          <include>version.properties</include>
	        </includes>
	        <filtering>true</filtering>
	      </resource>
	      <resource>
	        <directory>src/main/resources</directory>
	        <excludes>
	          <exclude>version.properties</exclude>
	        </excludes>
	        <filtering>false</filtering>
	      </resource>
	    </resources>
		<plugins>
			<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-surefire-plugin</artifactId>
			<version>2.22.1</version>
			<configuration>
				<skipTests>true</skipTests>
			</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>2.4.3</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<minimizeJar>true</minimizeJar>
							<filters>
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/*.SF</exclude>
										<exclude>META-INF/*.DSA</exclude>
										<exclude>META-INF/*.RSA</exclude>
										<exclude>META-INF/*.txt</exclude>
										<exclude>META-INF/maven/**</exclude>
										<exclude>about_files/**</exclude>
									</excludes>
								</filter>
								<filter>
									<artifact>*:*</artifact>
								</filter>
								<filter>
									<artifact>org.slf4j:slf4j-api</artifact>
									<includes>
										<include>**</include>
									</includes>
								</filter>
								<filter>
									<artifact>commons-logging:commons-logging</artifact>
									<includes>
										<include>**</include>
									</includes>
								</filter>
								<filter>
									<artifact>xpp3:xpp3</artifact>
									<includes>
										<include>**</include>
									</includes>
								</filter>
								<filter>
									<artifact>org.igniterealtime.smack:*</artifact>
									<includes>
										<include>**</include>
									</includes>
								</filter>
								<filter>
									<artifact>com.github.bwssytems:harmony-java-client</artifact>
									<includes>
										<include>**</include>
									</includes>
								</filter>
								<filter>
									<artifact>org.eclipse.paho:org.eclipse.paho.client.mqttv3</artifact>
									<includes>
										<include>**</include>
									</includes>
								</filter>
							</filters>
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>com.bwssystems.HABridge.HABridge</mainClass>
								</transformer>
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>